<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_thumbnail"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:title="@string/action_change_thumbnail"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_profile_details"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/action_edit_profile_details"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_account"
        android:title="@string/action_delete_account"
        app:showAsAction="never" />

</menu>